[project]
name = "mountain_variability_drivers"
version = "0.1.0"
description = "Efficient xarray-based workflow to map distributed (gridded) information into a semi-distributed geometry with landcover classes (main drivers of spatial variability of snow in mountains)"
authors = [
    {name = "Nicola Imperatore", email = "nicolaimpe@gmail.com"},
]
dependencies = ["xdem==0.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true



[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "tox>=4.32.0",
]
