[project]
name = "mountain_data_binner"
version = "0.1.0"
description = "Xarray based workflow for geospatial data binning in mountain landscape."
authors = [
    {name = "Nicola Imperatore", email = "nicola.imperatore@meteo.fr"},
]
dependencies = [ "xarray>=2025.6.1", "netCDF4>=1.7.3", "bottleneck>=1.6.0", "dask>=2025.12.0", "rioxarray>=0.19.0", "ipykernel>=7.1.0", "numpy>=2.2.6"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "tox>=4.32.0",
]
